Fix rotation control color on dark mode (#937)

--- a/sitemedia/scss/components/_transcription.scss
+++ b/sitemedia/scss/components/_transcription.scss
@@ -495,6 +495,8 @@
                 border: none;
                 padding: 0;
                 vertical-align: middle;
+                color: var(--on-backround);
+                transition: color 300ms ease;
                 cursor: pointer;
                 &:disabled {
                     color: var(--disabled);
